# Aystl

./: '  2  3  CMakeLists.txt  README.md  README_CN.md  \
cmake/: Init.cmake  Options.cmake  Utils.cmake
include/aystl/: arch.hpp  aystl.h  aystl.hpp  global.h  global.hpp  math.h  math.hpp  memory.hpp  tmp.hpp  type_traits.h  type_traits.hpp  utility.h  utility.hpp
include/aystl/core/arch/: arch.hpp  base.hpp  cast.hpp  compare.hpp  copy.hpp  hash.hpp
include/aystl/core/math/: bit_utils.hpp  common.hpp  compare.hpp  enum_utils.hpp  float16.hpp  hash.hpp
include/aystl/core/memory/: allocator.hpp
include/aystl/core/type_traits/: common.hpp  compare.hpp  is_specialization_of.hpp  memory.hpp  meta.hpp  optional.hpp  template.hpp  utility.hpp  utils.hpp
include/aystl/core/type_traits/meta/: char_seq.hpp  constant_list.hpp  int_seq.hpp  is_specialization_of.hpp  meta.hpp  template.hpp  type_list.hpp  value_list.hpp
include/aystl/core/type_traits/utils/: basic_seq.hpp  char_seq.hpp  compare.hpp  int_seq.hpp  memory.hpp  optional.hpp  type_list.hpp  value_list.hpp
include/aystl/global/: common.h  common.hpp  compare_def.inl  compiler.h  enum.hpp  member_func.hpp  system.h
include/aystl/math/: bit_utils.hpp  common.hpp  enum.hpp  enum_utils.hpp  limits.hpp
include/aystl/reflect/: enum_name.hpp  func_name.hpp  type_name.hpp  utils.hpp
include/aystl/tmp/: functional.hpp  meta.hpp  type_traits.hpp  utility.hpp
include/aystl/tmp/functional/: comparator.hpp  ct_array.hpp  ct_range.hpp  ct_sorted_array.hpp  ct_std_algo.hpp  functional_impl.hpp  impl.hpp  transfer.hpp
include/aystl/tmp/meta/: base.hpp  char_seq.hpp  constant_list.hpp  ct_range.hpp  impl.hpp  int_seq.hpp  meta_decl.hpp  meta_impl.hpp  template.hpp  transfer.hpp  type.hpp  type_list.hpp  utils.hpp  value_list.hpp
include/aystl/tmp/type_traits/: common.hpp  enum.hpp  is_specialization_of.hpp  template.hpp
include/aystl/tmp/utils/: char_seq.hpp  compare.hpp  compose_template.hpp  ct_sorted_array.hpp  ct_string.hpp  currying_template.hpp  memory.hpp  optional.hpp  placeholder.hpp  recursive_template.hpp  type_iterator.hpp
include/aystl/type_traits/: cmp.hpp  compare.hpp  enum.hpp  int_seq.hpp  is_specialization_of.hpp  memory.hpp  meta.hpp  optional.hpp  utils.hpp
include/aystl/utility/: any.hpp  common.hpp  ct_string.hpp  extern_func.hpp  function.hpp  hash.hpp  int_seq.hpp  list_utils.hpp  scope_guard.hpp  singleton.hpp  type_list.hpp  value_list.hpp
include/aytl/: type_traits.h
include/aytl/reflect/: enum_name.hpp  func_name.hpp  type_name.hpp  utils.hpp
include/aytl/type_traits/: cmp.hpp  int_seq.hpp  memory.hpp  optional.hpp  utils.hpp
main/: main.cc
tests/: CMakeLists.txt
tests/testlib/: CMakeLists.txt
tests/testlib/include/: aytestm.hpp  testlib.h
tests/testlib/src/: testlib.cc
tests/ut/: CMakeLists.txt
tests/ut/arch/: base.test.cc  compare.test.cc  test.main.cc
tests/ut/math/: bit_utils.test.cc  common.test.cc  compare.test.cc  enum_utils.test.cc  limits.test.cc
tests/ut/tmp/functional/: ct_array.test.cc  ct_range.test.cc  ct_sorted_array.test.cc
tests/ut/tmp/meta/: constant_list.test.cc  ct_range.test.cc  int_seq.test.cc  template.test.cc  type.test.cc  type_list.test.cc  value_list.test.cc
tests/ut/tmp/type_traits/: common.test.cc  compare.test.cc  enum.test.cc  template.test.cc
tests/ut/tmp/utils/: compare.test.cc  compose_template.test.cc  ct_sorted_array.test.cc  ct_string.test.cc  currying_template.test.cc  memory.test.cc  optional.test.cc  placeholder.test.cc
tests/ut/type_traits/: cmp.test.cc  common.test.cc  compare.test.cc  enum.test.cc  int_seq.test.cc  is_specialization_of.test.cc  memory.test.cc  meta.test.cc  optional.test.cc  template.test.cc  test.main.cc  type_list.test.cc  utils.test.cc  value_list.test.cc
tests/ut/type_traits/module1/: test1.test.cc  test2.test.cc
tests/ut/utility/: any.test.cc  common.test.cc  ct_string.test.cc  extern_func.test.cc  extern_func_ext1.test.cc  int_seq.test.cc  singleton.test.cc  test.main.cc  type_list.test.cc
